MacViews: Suppress post-IME key handling when there is marked IME text.

When interacting with an IME on Mac, some key sequences cause the
IME window to dismiss without any change to the text or ongoing
composition state. There is no method we can intercept when
-[NSResponder interpretKeyEvents:] does this. Currently, we assume the
event was unhandled, and it gets processed as an accelerator. This
may incorrectly cause a search to trigger in the Omnibox.

To fix, suppress post-IME key handling when there is marked IME text.
That is, if there was marked text at the start of keyDown: processing,
consider the event handled by IME, regardless of what methods it
invokes on the NSTextInputClient. Currently, only do this for tab
and enter.

Bug: 883952
Change-Id: Ief845a82502437d8b8f5fd3593cf25f87c6447ae
Reviewed-on: https://chromium-review.googlesource.com/1239975
Commit-Queue: Trent Apted <tapted@chromium.org>
Reviewed-by: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593766}